# RiotTakeHome

./: LICENSE  README.md  pyproject.toml
riot/: manage.py
riot/riot/: api.py  asgi.py  settings.py  urls.py  wsgi.py
riot/riot/secure_api/: algorithms.py  api.py  schema.py  test.py
